[gd_scene load_steps=4 format=3 uid="uid://bb711t5dekmpg"]

[ext_resource type="Script" path="res://elevator.gd" id="1_74kpp"]
[ext_resource type="Texture2D" uid="uid://dwvmwb3ff6yh3" path="res://icon.svg" id="2_i8iwh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lo8qj"]
size = Vector2(128, 128)

[node name="Elevator" type="Node2D"]
script = ExtResource("1_74kpp")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_i8iwh")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_lo8qj")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
